--- a/bio-style.css
+++ b/bio-style.css
@@ -1,5 +1,6 @@
 body{
-	background-color: black;
+	background: url("images/backgrounds/dark-suede.jpg");
+	background-size: cover;
 	color: white;
 	text-align: center;
 }
