--- a/bio-style.css
+++ b/bio-style.css
@@ -31,3 +31,22 @@ h4{
 	width: 15%;
 	margin: 0 auto;
 }
+
+.navbar-fixed-top {
+   background-color: rgba(245, 245, 245, 0.6);
+}
+@media screen and (min-width:701px){
+img {
+    max-width: 20%;
+		height: auto;
+}
+}
+
+
+@media screen and (max-width: 700px) and (min-width:0px){
+
+		img {
+				max-width: 40%;
+				height: auto;
+		}
+}
