There's always another issue.

--- a/bio-style.css
+++ b/bio-style.css
@@ -1,5 +1,5 @@
 body{
-	background: url("images/backgrounds/dark-suede.jpg");
+	background: url("images/backgrounds/dark-suede.png");
 	background-size: cover;
 	color: white;
 	text-align: center;
