--- a/bio-style.css
+++ b/bio-style.css
@@ -3,11 +3,25 @@ body{
 	background-size: cover;
 	padding-top: 70px;
 	text-align: center;
+}
+
+h4{
+	color: blue;
+}
+
+h1,h2,h5,p{
 	color: white;
 }
 
 #Bio{
 	text-align: center;
+}
+
+#end{
+	border: solid;
+	border-color: white;
+	width: 15%;
+	margin: 0 auto;
 }
 
 .bold{
@@ -22,32 +36,21 @@ body{
 	color: green;
 }
 
-h4{
-	color: blue;
-}
-
-#end{
-	border: solid;
-	border-color: white;
-	width: 15%;
-	margin: 0 auto;
-}
-
 .navbar-fixed-top {
    background-color: rgba(245, 245, 245, 0.6);
 }
+
 @media screen and (min-width:701px){
-img {
-    max-width: 20%;
-		height: auto;
-}
+	img {
+	    max-width: 20%;
+			height: auto;
+	}
 }
 
 
 @media screen and (max-width: 700px) and (min-width:0px){
-
-		img {
-				max-width: 40%;
-				height: auto;
-		}
+	img {
+			max-width: 40%;
+			height: auto;
+	}
 }
