--- a/bio-style.css
+++ b/bio-style.css
@@ -9,7 +9,19 @@ h4{
 	color: blue;
 }
 
-h1,h2,h5,p{
+h1{
+	color: white;
+}
+
+h2{
+	color: white;
+}
+
+h5{
+	color: white;
+}
+
+p{
 	color: white;
 }
 
