--- a/bio-style.css
+++ b/bio-style.css
@@ -1,5 +1,5 @@
 body{
-	background: url("images/backgrounds/background.jpg");
+	background: url("images/backgrounds/dark-wood.png");
 	background-size: cover;
 	padding-top: 70px;
 	text-align: center;
